force-app/main/default/objects/PDRI__Deployment_Activity_Entry__c/PDRI__Deployment_Activity_Entry__c.object-meta.xml
<CustomObject>
    <label>Deployment Activity Entry</label>
    <nameField>
        <displayFormat>DAE-{000000000}</displayFormat>
        <label>Deployment Activity Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Activity Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>