force-app/main/default/objects/PDRI__Deployment_Activity_Entry__c/fields/PDRI__Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Activity_Date_Time__c</fullName>
    <label>Activity Date/Time</label>
    <type>DateTime</type>
</CustomField>