force-app/main/default/objects/PDRI__Deployment_Activity_Entry__c/fields/PDRI__Category__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Handler</fullName>
            </value>
            <value>
                <fullName>Governor Limits</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Relationship Traversal</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Creation</fullName>
            </value>
            <value>
                <fullName>Events Processing</fullName>
            </value>
            <value>
                <fullName>Deployment Plan Processing</fullName>
            </value>
            <value>
                <fullName>Final Processing</fullName>
            </value>
            <value>
                <fullName>Invocations Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>