force-app/main/default/objects/PDRI__Deployment_Activity_Entry__c/fields/PDRI__Deployment_Data_Set_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Data_Set_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Data Set Result</label>
    <referenceTo>PDRI__Deployment_Data_Set_Result__c</referenceTo>
    <relationshipLabel>Deployment Activity Entries</relationshipLabel>
    <relationshipName>Deployment_Activity_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>