force-app/main/default/objects/PDRI__Deployment_Activity_Entry__c/fields/PDRI__Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Result__c</fullName>
    <label>Deployment Result</label>
    <referenceTo>PDRI__Deployment_Result__c</referenceTo>
    <relationshipLabel>Deployment Activity Entries</relationshipLabel>
    <relationshipName>Deployment_Activity_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>