force-app/main/default/objects/PDRI__Deployment_Activity_Entry__c/fields/PDRI__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Error_Code__c</fullName>
    <label>Error Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>