force-app/main/default/objects/PDRI__Deployment_Activity_Entry__c/fields/PDRI__Error_Key__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Error_Key__c</fullName>
    <label>Error Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>