force-app/main/default/objects/PDRI__Deployment_Activity_Entry__c/fields/PDRI__Message__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Message__c</fullName>
    <label>Message</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>